working on books crud
